# Bioinformatics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  output.txt  program
include/: FMIndex.hpp  RIndex.hpp  Wavelet.h  Wavelet.hpp
src/: FMIndex.cpp  RIndex.cpp  Wavelet.cpp  main.cpp
tests/: FMIndex_Test.cpp  FMIntext_Test.cpp  RIndex_Test.cpp  Wavelet_Test.cpp
tests/resources/: ecoli.txt
